syntax = "proto3";
package topology.object;

message TopologyObject {
    string id = 1;
    string abi = 2;
    bytes bytecode = 3;
}
