syntax = "proto3";

package topology.object;

import "google/protobuf/struct.proto";

option go_package = "ts-topology/packages/object";

// Supposed to be the RIBLT stuff
message Vertex {
  message Operation {
    string type = 1;
    google.protobuf.Value value = 2;
  }
  string hash = 1;
  string nodeId = 2;
  Operation operation = 3;
  repeated string dependencies = 4;
}

message CodedVertexHash {
  bytes sum = 1;
  bytes checksum = 2;
  int32 count = 3;
}

message TopologyObjectBase {
  string id = 1;
  optional string abi = 2;
  optional bytes bytecode = 3;
  repeated Vertex vertices = 4;
}
